crates/nash-driver/tests/solve/snapshots/solve__inference__enclosing_given_waits_for_rank_propagation_through_case_branches.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "Code:\n\nmodule Main exposing (..)\ntype Choice = First | Second\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep 'a => Keep (list 'a) where\n    keep xs = xs\nf : Keep (list 'a) => list 'a -> list 'a\nf = \\xs ->\n    let\n        g y =\n            case First of\n                First -> keep [y]\n                Second -> xs\n    in\n    case xs of\n        [] -> []\n        z :: rest -> g z\n"
---
f : forall a. (Storable a, Keep (list a)) => list a -> list a
