crates/nash-driver/tests/solve/snapshots/solve__inference__expanding_impl_context_stops_with_a_diagnostic.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "module Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep (list (list 'a)) => Keep (list 'a) where\n    keep xs = xs\nvalue = keep [()]\n"
info: diagnostic
---
nash::type::impl_resolution_limit

  × Impl resolution for `Keep` in `keep` exceeded the work limit.
   ╭─[Main.nash:6:9]
 5 │     keep xs = xs
 6 │ value = keep [()]
   ·         ────
   ╰────
  help: This requirement remains unchecked; other reported errors still apply.

        Simplify cyclic or growing impl constraints.
