crates/nash-driver/tests/solve/snapshots/solve__inference__function_application_pins_types.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "Code:\n\nmodule Main exposing (id, main)\n\nid x = x\n\nmain = id 42\n"
---
id : forall a. a -> a
main : forall a. FromInt a => a
