crates/nash-driver/tests/solve/snapshots/solve__inference__hidden_trait_variable_is_reported_at_the_innermost_definition.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "module Main exposing (..)\ntrait Round 'a where\n    create : () -> 'a\n    discard : 'a -> ()\nouter x =\n    let\n        hidden = discard (create ())\n    in\n        (x, hidden)\n"
info: diagnostic
---
nash::type::ambiguous_type

  × Cannot determine type `'a` in `hidden`.
   ╭─[Main.nash:7:9]
 6 │     let
 7 │         hidden = discard (create ())
   ·         ──────
 8 │     in
   ╰────
  help: Required constraints: Round 'a

        Add a type annotation that determines this variable.
