crates/nash-driver/tests/solve/snapshots/solve__inference__higher_kinded_value_inference_preserves_partial_heads.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "Code:\n\nmodule Main exposing (..)\nidentityK : 'f 'a -> 'f 'a\nidentityK x = x\ntwo : 'g 'b 'a -> 'g 'b 'a\ntwo x = identityK x\nreverse : 'f 'a -> 'f 'b -> ( 'f 'b, 'f 'a )\nreverse x y = (identityK y, identityK x)\n"
---
identityK : forall a f. Apply f a => f a -> f a
reverse : forall a b f. (Apply f a, Apply f b) => f a -> f b -> ( f b, f a )
two : forall a b g. Apply g b a => g b a -> g b a
