crates/nash-driver/tests/solve/snapshots/solve__inference__identity_function.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "Code:\n\nmodule Main exposing (id)\n\nid x = x\n"
---
id : forall a. a -> a
